fix password field broken in safari (#160)

--- a/assets/less/components/login.less
+++ b/assets/less/components/login.less
@@ -31,7 +31,8 @@
     }
     .form-inputs {
       input {
-        padding: 25px;
+        padding: 15px;
+        height: auto;
         border: 2px solid @brand-neutral--4;
       }
     }
